# zeroveil-sdk

./: .gitignore  COPYRIGHT  LICENSE  README.md  pyproject.toml
src/zeroveil/: __init__.py
src/zeroveil/client/: __init__.py  api_client.py  config.py  device_detector.py  scrubber.py
tests/: test_smoke.py
