[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeroveil"
version = "0.1.0"
description = "Minimal client SDK for ZeroVeil privacy relay"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.10"
authors = [{ name = "Saqib Ali Khan", email = "Saqib.Khan@me.com" }]
keywords = [
    "llm",
    "privacy",
    "relay",
    "pii",
    "anonymity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
# PII scrubbing with Presidio
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

# Device detection
device = [
    "gputil>=1.4.0",
    "psutil>=5.9.0",
]

# Full SDK
full = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "gputil>=1.4.0",
    "psutil>=5.9.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Free-Radical/Cortex1-ZeroVeil"
Documentation = "https://github.com/Free-Radical/Cortex1-ZeroVeil/tree/main/docs"
Repository = "https://github.com/Free-Radical/Cortex1-ZeroVeil"
Issues = "https://github.com/Free-Radical/Cortex1-ZeroVeil/issues"

[project.scripts]
zeroveil-device = "zeroveil.client.device_detector:print_device_info"

[tool.hatch.build.targets.wheel]
packages = ["src/zeroveil", "src/zeroveil_pro"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
